fix the main wrap
After this fix, the text will display korekt.

--- a/htdocs/tntnet.css
+++ b/htdocs/tntnet.css
@@ -37,7 +37,7 @@ body {
     margin: 0 auto;
     width: 980px;
     height: 100%;
-    top: -10px;
+    top: 10px;
     left: 0;
     right: 0;
     min-height: 590px;
